--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,18 +26,18 @@ body {
 
 .header__title {
     padding: 10px;
-    font-size: 5rem;
+    font-size: 7rem;
     font-weight: 700;
 }
 
 .header__info {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 10px;
 }
 
 .header__info-commands {
     text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     font-weight: 500;
     text-shadow: -1px -1px 0 #01FF70, 
                   1px -1px 0 #01FF70,
@@ -105,6 +105,38 @@ body {
     font-size: 2.5rem;
     font-weight: 900;
     margin-bottom: 20px;
+}
+
+.map-board {
+    width: 1100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.maze-wall {
+    height: 50px;
+    width: 50px;
+    background-color: #01FF70;
+    border: 1px solid #01FF70;
+}
+
+.maze-space {
+    height: 50px;
+    width: 50px;
+    background-color: #000100;
+    border: 1px solid #000100;
+}
+
+.maze-spaceship {
+    height: 100%;
+    width: 100%;
+}
+
+.maze-planet-nine {
+    height: 100%;
+    width: 100%;
 }
 
 
