--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,18 @@ body {
     font-size: 16px;
 }
 
-.body__background {
-    background-image: url('.assets/images/galaxy-background.jpg');
+.body__animation-init {
+    animation: rising-body-init 5s;
+}
+
+.body__animation-game {
+    animation: rising 5s;
+}
+
+.body-game-background {
+    background-color: transparent;
+    background-image: url('/assets/images/galaxy-background.jpg');
+    background-size: 100px;
     background-repeat: repeat;
 }
 
@@ -66,7 +76,7 @@ body {
 .section__button {
     margin: 50px;
     border: none;
-    background-color: #000100;
+    background-color: transparent;
     color: #FFF;
     font-size: 2.5rem;
     font-weight: 900;
@@ -144,10 +154,42 @@ body {
     width: 100%;
 }
 
+.inside-spaceship-animation {
+    animation: spaceship-arrive 5s;
+}
+
+.inside-spaceship-slideRight {
+    animation-name: slideRight;
+    animation-duration: 100ms;
+}
+
+.inside-spaceship-slideLeft {
+    animation-name: slideLeft;
+    animation-duration: 100ms;
+}
+
+.inside-spaceship-slideTop {
+    animation: slideTop 100ms;
+}
+
+.inside-spaceship-slideDown {
+    animation: slideDown 100ms;
+}
 
 @keyframes rising {
     0% {
         opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes rising-body-init {
+    0% {
+        opacity: 0;
+        background-color: #FFF;
     }
 
     100% {
@@ -180,6 +222,58 @@ body {
     }
 }
 
+@keyframes spaceship-arrive {
+    0% {
+        opacity: .5;
+        transform: translateX(-1000px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes slideRight {
+    0% {
+        transform: translateX(-33px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideLeft {
+    0%{
+        transform: translateX(33px);
+    }
+
+    100% {
+        transform: translateX(0px);
+    }
+}
+
+@keyframes slideTop {
+    0%{
+        transform: translateY(33px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes slideDown {
+    0%{
+        transform: translateY(-33px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
 @keyframes buttons {
     0% {
         opacity: 1;
@@ -191,18 +285,6 @@ body {
 
     100% {
         opacity: 1;
-    }
-}
-
-@keyframes spaceship-arrive {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0px);
     }
 }
 
