--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #000100;
     color: #FFF;
     font-size: 16px;
+    overflow: hidden;
 }
 
 .body__animation-init {
@@ -61,7 +62,7 @@ body {
 }
 
 .section {
-    width: 75%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,16 +143,19 @@ body {
     width: 50px;
     background-color: transparent;
     border: 1px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .maze-spaceship {
-    height: 100%;
-    width: 100%;
+    height: 46px;
+    width: 50px;
 }
 
 .maze-planet-nine {
-    height: 100%;
-    width: 100%;
+    height: 44px;
+    width: 50px;
 }
 
 .inside-spaceship-animation {
@@ -174,6 +178,112 @@ body {
 
 .inside-spaceship-slideDown {
     animation: slideDown 100ms;
+}
+
+.popup {
+    width: 550px;
+    
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #FFF;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    color: #000100;
+    font-weight: 900;
+}
+
+.popup__animation {
+    animation: rising 5s;
+}
+
+.popup__title {
+    font-size: 4rem;
+    font-weight: 900;
+    padding: 20px;
+    color: #01FF70;
+    text-shadow: -1px -1px 0 #000100, 
+                  1px -1px 0 #000100,
+                 -1px  1px 0 #000100,
+                  1px  1px 0 #000100;
+    animation: buttons 1s infinite;
+}
+
+.popup__paragraph {
+    width: 400px;
+    font-size: 1.5rem;
+    margin: 10px;
+}
+
+.popup__img {
+    width: 100px;
+    margin: 20px;
+}
+
+.buttons-nest {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.popup__button {
+    width: 200px;
+    padding: 10px;
+    border: none;
+    background-color: transparent;
+    color: #01FF70;
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: 'Free Pixel', Arial, Helvetica, sans-serif;
+    text-shadow: -1px -1px 0 #000100, 
+                  1px -1px 0 #000100,
+                 -1px  1px 0 #000100,
+                  1px  1px 0 #000100;
+}
+
+.popup__button:hover {
+    animation: buttons 1s infinite;
+    cursor: pointer;
+}
+
+.popup__button--red {
+    padding: 10px;
+    border: none;
+    background-color: transparent;
+    color: #FF6347;
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: 'Free Pixel', Arial, Helvetica, sans-serif;
+    text-shadow: -1px -1px 0 #000100, 
+                  1px -1px 0 #000100,
+                 -1px  1px 0 #000100,
+                  1px  1px 0 #000100;
+    
+}
+
+.popup__button--red:hover {
+    animation: buttons 1s infinite;
+    cursor: pointer;
+}
+
+.body__end {
+    justify-content: center;
+}
+
+.popup__planetNine {
+    z-index: -1;
+    animation: planet9End 10s;
+}
+
+.spaceship-end-1 {
+    position: absolute;
+    width: 300px;
+    height: 275px;
+    animation: spaceshipEnd 8s;
 }
 
 @keyframes rising {
@@ -236,7 +346,7 @@ body {
 
 @keyframes slideRight {
     0% {
-        transform: translateX(-33px);
+        transform: translateX(-30px);
     }
 
     100% {
@@ -246,7 +356,7 @@ body {
 
 @keyframes slideLeft {
     0%{
-        transform: translateX(33px);
+        transform: translateX(30px);
     }
 
     100% {
@@ -256,7 +366,7 @@ body {
 
 @keyframes slideTop {
     0%{
-        transform: translateY(33px);
+        transform: translateY(30px);
     }
 
     100% {
@@ -266,7 +376,7 @@ body {
 
 @keyframes slideDown {
     0%{
-        transform: translateY(-33px);
+        transform: translateY(-30px);
     }
 
     100% {
@@ -285,6 +395,30 @@ body {
 
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes planet9End {
+    0% {
+        height: 0;
+        width: 0;
+    }
+
+    100% {
+        height: 443px;
+        width: 500px;
+    }
+}
+
+@keyframes spaceshipEnd {
+    0% {
+        transform: translateY(800px);
+    }
+
+    100% {
+        transform: translateY(0);
+        width: 0;
+        height: 0;
     }
 }
 
