--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Free Pixel';
-    src: url('../assets/fonts/FreePixel.ttf');
+    src: url(../fonts/FreePixel.ttf);
 }
 
 html, body {
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     font-family: 'Free Pixel', Arial, Helvetica, sans-serif;
     background-color: #000100;
     color: #FFF;
@@ -29,15 +30,19 @@ body {
 
 .body-game-background {
     background-color: transparent;
-    background-image: url('../assets/images/galaxy-background.jpg');
+    background-image: url(../images/galaxy-background.jpg);
     background-size: 100px;
     background-repeat: repeat;
 }
 
 .header {
     text-align: center;
-    padding: 30px;
+    padding: 20px;
     margin-bottom: 130px;
+}
+
+.header--instructions {
+    margin-bottom: 20px;
 }
 
 .header__title {
@@ -48,10 +53,10 @@ body {
 
 .header__info {
     font-size: 2rem;
-    margin-bottom: 10px;
 }
 
 .header__info-commands {
+    padding: 20px;
     text-transform: uppercase;
     font-size: 2.2rem;
     font-weight: 500;
@@ -95,8 +100,8 @@ body {
 
 .section__instructions-title {
     padding: 15px;
-    font-size: 3rem;
-    font-weight: 600;
+    font-size: 3.5rem;
+    font-weight: 900;
 }
 
 .section__instructions-list {
